--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
-<h2>garystephens.github.io</h2>
-My projects
-<ul>
-<li><a href="/RandomWikipediaPage">Random Wikipedia Page</a> - allows you to open a random Wikipedia page from the top N to M ranked pages (you choose the values of N of M, from 1 up to 200,000 maximum)
-<li><a href="/picture-quiz-grid-generator">Picture Quiz Grid Generator</a> - allows you to open a random Wikipedia page from the top N to M ranked pages (you choose the values of N of M, from 1 up to 200,000 maximum)
-</ul>
+<html>
+  <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128490828-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() { dataLayer.push(arguments); }
+            gtag('js', new Date());
+            gtag('config', 'UA-128490828-1');
+        </script>
+  </head>
+  <body>
+    <h2>garystephens.github.io</h2>
+    My projects
+    <ul>
+      <li><a href="/RandomWikipediaPage">Random Wikipedia Page</a> - allows you to open a random Wikipedia page from the top N to M ranked pages (you choose the values of N of M, from 1 up to 200,000 maximum)
+      <li><a href="/picture-quiz-grid-generator">Picture Quiz Grid Generator</a> - allows you to open a random Wikipedia page from the top N to M ranked pages (you choose the values of N of M, from 1 up to 200,000 maximum)
+    </ul>
+  </body>
+</html>
