--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     My projects
     <ul>
       <li><a href="/RandomWikipediaPage">Random Wikipedia Page</a> - allows you to open a random Wikipedia page from the top N to M ranked pages (you choose the values of N of M, from 1 up to 200,000 maximum)
-      <li><a href="/picture-quiz-grid-generator">Picture Quiz Grid Generator</a> - allows you to open a random Wikipedia page from the top N to M ranked pages (you choose the values of N of M, from 1 up to 200,000 maximum)
+      <li><a href="/picture-quiz-grid-generator">Picture Quiz Grid Generator</a> - easily create a picture quiz, displayed in a numbered grid
     </ul>
   </body>
 </html>
