--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <h2>garystephens.github.io</h2>
     My projects
     <ul>
-      <li><a href="/RandomWikipediaPage">Random Wikipedia Page</a> - allows you to open a random Wikipedia page from the top N to M ranked pages (you choose the values of N of M, from 1 up to 200,000 maximum)
       <li><a href="/picture-quiz-grid-generator">Picture Quiz Grid Generator</a> - easily create a picture quiz, displayed in a numbered grid
+      <li><a href="/quiz-slideshow">Quiz Slideshow</a> - easily turn your spreadsheet of questions and answers into an attractive slideshow for use at quiz events, both online and offline
+      <li><a href="/RandomWikipediaPage">Random Wikipedia Page</a> - allows you to open a random Wikipedia page from the top N to M ranked pages (you choose the values of N of M, from 1 up to 200,000 maximum)
     </ul>
   </body>
 </html>
