--- a/index.html
+++ b/index.html
@@ -17,5 +17,10 @@
       <li><a href="/quiz-slideshow">Quiz Slideshow</a> - easily turn your spreadsheet of questions and answers into an attractive slideshow for use at quiz events, both online and offline
       <li><a href="/RandomWikipediaPage">Random Wikipedia Page</a> - allows you to open a random Wikipedia page from the top N to M ranked pages (you choose the values of N of M, from 1 up to 200,000 maximum)
     </ul>
+    See also some of my quizzes at:
+    <ul>
+      <li><a href="https://www.facebook.com/GSQuizzes1">GS Quizzes on Facebook</a></li>
+      <li><a href="https://twitter.com/GSQuizzes">GS Quizzes on Twitter</a></li>
+    </ul>
   </body>
 </html>
