--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <li><a href="/picture-quiz-grid-generator">Picture Quiz Grid Generator</a> - easily create a picture quiz, displayed in a numbered grid
       <li><a href="/quiz-slideshow">Quiz Slideshow</a> - easily turn your spreadsheet of questions and answers into an attractive slideshow for use at quiz events, both online and offline
       <li><a href="/RandomWikipediaPage">Random Wikipedia Page</a> - allows you to open a random Wikipedia page from the top N to M ranked pages (you choose the values of N of M, from 1 up to 200,000 maximum)
+      <li><a href="/self-sorting-scoresheet">Self-Sorting Scoresheet</a> - enter a player or team's score and the scoresheet automatically re-sorts itself
     </ul>
     See also some of my quizzes at:
     <ul>
