--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
             gtag('js', new Date());
             gtag('config', 'UA-128490828-1');
         </script>
+        <style>
+          body { font-family: "sans-serif" }
+        </style>
   </head>
   <body>
     <h2>garystephens.github.io</h2>
