--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
             gtag('config', 'UA-128490828-1');
         </script>
         <style>
-          body { font-family: "sans-serif" }
+          body {
+            font-family: sans-serif;
+            font-size: 0.8rem;
+          }
         </style>
   </head>
   <body>
