--- a/index.html
+++ b/index.html
@@ -8,12 +8,7 @@
             gtag('js', new Date());
             gtag('config', 'UA-128490828-1');
         </script>
-        <style>
-          body {
-            font-family: sans-serif;
-            font-size: 0.8rem;
-          }
-        </style>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
   </head>
   <body>
     <h2>garystephens.github.io</h2>
