Added links to Puzzgrid puzzles

--- a/index.html
+++ b/index.html
@@ -25,5 +25,19 @@
       <li><a href="https://www.facebook.com/GSQuizzes1">GS Quizzes on Facebook</a></li>
       <li><a href="https://twitter.com/GSQuizzes">GS Quizzes on Twitter</a></li>
     </ul>
+    My Puzzgrid.com grids:
+    <ul>
+      <li><a href="https://puzzgrid.com/grid/67904">Grid #67904 - <i>What's the craic?</i></a></li>
+      <li><a href="https://puzzgrid.com/grid/67842">Grid #67842 - <i>Going haywire</i></a></li>
+      <li><a href="https://puzzgrid.com/grid/66070">Grid #66070 - <i>The life and loves of a shedevil</i></a></li>
+      <li><a href="https://puzzgrid.com/grid/57685">Grid #57685 - <i>A taste of fudge</i></a></li>
+      <li><a href="https://puzzgrid.com/grid/44247">Grid #44247 - <i>Just the job!</i></a></li>
+      <li><a href="https://puzzgrid.com/grid/38442">Grid #38442 - <i>Glimpse of a falling star</i></a></li>
+    </ul>
+    Puzzgrids for young kids:
+    <ul>
+      <li><a href="https://puzzgrid.com/grid/27090">Grid #27090 - <i>Smelly socks</i></a></li>
+      <li><a href="https://puzzgrid.com/grid/27092">Grid #27092 - <i>Dinosaur slippers</i></a></li>
+    </ul>    
   </body>
 </html>
