--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <html>
   <head>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128490828-1"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag() { dataLayer.push(arguments); }
-            gtag('js', new Date());
-            gtag('config', 'UA-128490828-1');
-        </script>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
+    <title>garystephens.github.io - My Projects</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128490828-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+      gtag('config', 'UA-128490828-1');
+    </script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
   </head>
   <body>
     <h2>garystephens.github.io</h2>
@@ -25,19 +26,19 @@
       <li><a href="https://www.facebook.com/GSQuizzes1">GS Quizzes on Facebook</a></li>
       <li><a href="https://twitter.com/GSQuizzes">GS Quizzes on Twitter</a></li>
     </ul>
-    My Puzzgrid.com grids:
+    My Puzzgrid.com 'connecting walls':
     <ul>
       <li><a href="https://puzzgrid.com/grid/67904">Grid #67904 - <i>What's the craic?</i></a></li>
       <li><a href="https://puzzgrid.com/grid/67842">Grid #67842 - <i>Going haywire</i></a></li>
       <li><a href="https://puzzgrid.com/grid/66070">Grid #66070 - <i>The life and loves of a shedevil</i></a></li>
-      <li><a href="https://puzzgrid.com/grid/57685">Grid #57685 - <i>A taste of fudge</i></a></li>
+      <li><a href="https://puzzgrid.com/grid/57685">Grid #57685 - <i>Mmm... fudge</i></a></li>
       <li><a href="https://puzzgrid.com/grid/44247">Grid #44247 - <i>Just the job!</i></a></li>
-      <li><a href="https://puzzgrid.com/grid/38442">Grid #38442 - <i>Glimpse of a falling star</i></a></li>
+      <li><a href="https://puzzgrid.com/grid/38442">Grid #38442 - <i>A glimpse of a falling star</i></a></li>
     </ul>
     Puzzgrids for young kids:
     <ul>
-      <li><a href="https://puzzgrid.com/grid/27090">Grid #27090 - <i>Smelly socks</i></a></li>
       <li><a href="https://puzzgrid.com/grid/27092">Grid #27092 - <i>Dinosaur slippers</i></a></li>
+      <li><a href="https://puzzgrid.com/grid/27090">Grid #27090 - <i>Smelly socks</i></a></li>
     </ul>    
   </body>
 </html>
