Added link to my latest PuzzGrid effort

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     </ul>
     My Puzzgrid.com 'connecting walls':
     <ul>
+      <li><a href="https://puzzgrid.com/grid/70300">Grid #70300 - <i>Virgin Mary</i></a></li>
       <li><a href="https://puzzgrid.com/grid/67904">Grid #67904 - <i>What's the craic?</i></a></li>
       <li><a href="https://puzzgrid.com/grid/67842">Grid #67842 - <i>Going haywire</i></a></li>
       <li><a href="https://puzzgrid.com/grid/66070">Grid #66070 - <i>The life and loves of a shedevil</i></a></li>
